2006-11-28  Matthieu Nottale  <nottale@gostai.com>

	uobject up

2006-11-27  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fixes for win32/MSVC++.
	* src/network/bsdnet/network.hh,
	* src/network/bsdnet/network.cc,
	* src/network/bsdnet/connection.cc: Include config.h. Define
          _WIN32_WINNT before including winsock2.h.

	* src/parser/bison/bison.mk: Fix the output generated by flex: Do not
          include unistd.h if WIN32 is defined. This requires to include
          config.h but we can't do it from utoken.l since config.h must be
          included before we attempt to include unistd.h and this occurs
          at the very beginning of the file, where we don't have control.

2006-11-27  Jean-Christophe Baillie  <baillie@gostai.com>

	fix ticket #77 
	* src/ucommand.cc: add missing event deletion in UCommand_EMIT
        destructor + code refactoring.
	* src/ucommand.hh: add removeEvent method.
	* src/utypes.hh: nothing.

2006-11-25  Matthieu Nottale  <nottale@gostai.com>

	Bugfix <TITLE> uobject up
	* src/ucommand.cc: Fix a bug in ucommand_assign::execute.
	* src/uobject.cc: Implement new "cast" overload to const char *.

2006-11-24  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix CLEANFILES.
	* tests/Makefile.am: Use '+=' because it's already initialized.

2006-11-24  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix distcheck.
	* Makefile.am (dist-hook): New: remove remaining .svn files.
	* tests/Makefile.am (check-TESTS): Fix the case where srcdir ==
          buildir.
          (EXTRA_DIST, CLEANFILES): New.

2006-11-24  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	List the tests that fail in XFAIL_TESTS.
	* tests/Makefile.am: Here.

2006-11-23  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix bug #84.
	* src/parser/bison/ugrammar.y: Raise parse errors in cases where the
          then-part of an if-else or the at-part of an at-onleave is empty.
          eg: if (true) else whatever;
              at (true) onleave whatever;