@@ -1,3 +1,8 @@
+2006-12-15  Matthieu Nottale  <nottale@gostai.com>
+
+	Revert patch that fixes bug but kills aibo
+	* src/ucommand.cc: Here.
+
 2006-11-28  Matthieu Nottale  <nottale@gostai.com>
 
 	uobject up
